[package]
name = "rusty-miller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
rand = "0.8"
num = { version = "0.4", features = ["rand"] }
num-iter = "0.1"
lazy_static = "1.4.0"
